--- a/pages/login/index.css
+++ b/pages/login/index.css
@@ -1,1 +1,26 @@
-/* Desenvolva a estilização da sua página aqui */
+aside {
+
+}
+
+aside section {
+    position: absolute;
+    bottom: 0;
+}
+
+aside section img {
+    height: 100%;
+}
+
+main {
+    border: 1px solid var(--grey600);
+    border-radius: var(--radius-default1);
+    padding: 1rem;
+    margin-top: 1rem;
+}
+
+@media (min-width: 500px) {
+    body {
+        display: flex;
+    }
+    
+}
