--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,26 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 :root {
-  --brand100: "hsl(230, 57%, 50%)";
-  --brand200: "hsl(230, 68%, 54%)";
-  --gray100: "hsl(210, 11%, 15%)";
-  --gray200: "hsl(210, 10%, 23%)";
-  --gray300: "hsl(210, 9%, 31%)";
-  --gray400: "hsl(210, 7%, 56%)";
-  --gray500: "hsl(210, 11%, 71%)";
-  --gray600: "hsl(210, 16%, 93%)";
-  --gray700: "hsl(210, 17%, 95%)";
-  --gray800: "hsl(210, 17%, 98%)";
-  --gray900: "hsl(200, 100%, 99%)";
-  --alert100: "hsl(349, 57%, 50%)";
-  --alert200: "hsl(349, 69%, 55%)";
-  --sucess100: "hsl(162, 88%, 26%)";
+  --brand100: hsl(230, 57%, 50%);
+  --brand200: hsl(230, 68%, 54%);
+  --grey100: hsl(210, 11%, 15%);
+  --grey200: hsl(210, 10%, 23%);
+  --grey300: hsl(210, 9%, 31%);
+  --grey400: hsl(210, 7%, 56%);
+  --grey500: hsl(210, 11%, 71%);
+  --grey600: hsl(210, 16%, 93%);
+  --grey700: hsl(210, 17%, 95%);
+  --grey800: hsl(210, 17%, 98%);
+  --grey900: hsl(200, 100%, 99%);
+  --alert100: hsl(349, 57%, 50%);
+  --alert200: hsl(349, 69%, 55%);
+  --sucess100: hsl(162, 88%, 26%);
+
+  --radius-default1: 4px;
+  --radius-default2: 8px;
 }
 
 body {
-  font-family: "Inter, sans-serif";
+  font-family: 'Inter', sans-serif;
+  height: 90vh;
+  max-width: 50rem;
+  width: 100%;  
+  align-items: center;
+  margin: 0 auto;
+  padding: 2rem;
+
+}
+
+.brand1 {
+  color: var(--brand100);
 }
