--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  list-style: none;
   line-height: 1.5;
 }
 
@@ -29,8 +30,8 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
-  height: 90vh;
+  font-family: 'Inter', sans-serif; 
+  min-height: 90vh; 
   max-width: 50rem;
   width: 100%;  
   align-items: center;
