--- a/styles/flex.css
+++ b/styles/flex.css
@@ -6,6 +6,10 @@
     flex-direction: column;
 }
 
+.flex-row {
+    flex-direction: row;
+}
+
 .justify-space-between {
     justify-content: space-between;
 }
