--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -2,103 +2,117 @@ body {
     gap: 2rem;
 }
 
+header figure {
+    position: relative;
+}
+
+.logout {
+    border-radius: var(--radius-default1);
+    background-color: var(--grey900);
+    box-shadow: 5px 5px 15px 5px #000000;
+    position: absolute;
+    right: 0;
+    top: 42px;
+    width: 13.5rem;
+    padding: 1rem;
+    display: none;
+}
+
+.logout>button {
+    opacity: 0.5;
+    background-color: transparent;
+    border: none;
+}
+
+.logout>button:hover {
+    opacity: 1;
+}
+
+header figure:hover>.logout {
+    display: block;
+}
+
+
 header {
     max-width: 18.75rem;
     width: 100%;
     gap: 2rem;
+    position: relative;
 }
 
 header h2 {
     background-color: var(--grey800);
+    margin-top: 4rem;
 }
 
-main {
+#button-create-post {
+    position: absolute;
+    width: 100%;
+    top: 5rem;
+    left: 0;
+}
 
+#avatar-img {
+    width: 41px;
+    height: 41px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#avatar-img img {
+    width: 100%;
+}
+
+.user-figure {
+    width: 41px;
+    height: 41px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+}
+
+.li-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.title-clip {
+    display: -webkit-box;
+    max-width: 50rem;
+    width: 100%;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.content-clip {
+    display: -webkit-box;
+    max-width: 50rem;
+    width: 100%;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 @media (min-width: 35rem) {
-    body {
-        
-    }
 
     header {
         max-width: unset;
     }
 
-    header figure {
-        position: relative;
-        
+    #button-create-post {
+        position: unset;
     }
 
-    #avatar-img {
-        width: 41px;
-        height: 41px;
-        border-radius: 50%;
-        overflow: hidden;
+    header h2 {
+        margin-top: unset;
     }
 
-    #avatar-img img {
-        width: 100%;
+
+    div:has(.x-modal) {
+        position: unset;
     }
 
-    .logout {
-        border-radius: var(--radius-default1);
-        background-color: var(--grey900);
-        box-shadow: 5px 5px 15px 5px #000000;
-        position: absolute;
-        right: 0;
-        top: 42px;
-        width: 13.5rem;
-        padding: 1rem;
-        display: none;        
-    }
-
-    .logout > button {
-        opacity: 0.5;
-        background-color: transparent;
-        border: none;
-
-    }
-
-    .logout > button:hover {
-        opacity: 1;
-    }
-
-    header figure:hover > .logout {        
-        display: block;
-    }
-
-    .user-figure {
-        width: 41px;
-        height: 41px;
-        border-radius: 50%;
-        overflow: hidden;
-        display: flex;
-    }
-
-    .title-clip {
-        display: -webkit-box;
-        max-width: 50rem;
-        width: 100%;
-        -webkit-line-clamp: 1;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        overflow: hidden;
-    }
-    .content-clip {
-        display: -webkit-box;
-        max-width: 50rem;
-        width: 100%;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        overflow: hidden;
-    }
-    
-    .li-img {
-        width: 100%;
-        object-fit: cover;
-    }
-   
 }
-    
