fix: register spinner

--- a/pages/register/index.css
+++ b/pages/register/index.css
@@ -42,6 +42,13 @@ form .button-default {
     width: 100%;
 }
 
+.animate-spinner {
+    animation-name: spinner;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+}
+
 @media (min-width: 37.5rem) {
     body {
         display: flex;
@@ -109,4 +116,11 @@ form .button-default {
         width: 100%;
     }
 
+}
+
+@keyframes spinner {
+    0% {transform: rotateZ(0deg);}
+    90% {transform: rotateZ(360deg);}
+    100% {transform: rotateZ(360deg);}
+    
 }
